2007-10-02  Frank Ch. Eigler  <fche@redhat.com>

	PR 3635
	* translate.cxx (emit_global): Wrap all globals and locks into one
	top-level struct.  Update references to former "global_VAR" prefix.
	* translate.h (emit_global_init): New function.
	
2007-10-02  Frank Ch. Eigler  <fche@redhat.com>

	PR 5078
	* tapsets.cxx (be_derived_probe): Rework to add error probe support.
	Emit probe description array in C for traversal by generated code.
	* register_standard_tapsets: Add error probes.
	* stapprobes.5.in: Document.
	* translate.cxx (emit_module_init): Handle errors that may occur
	during begin probes.
	(emit_module_exit): Use schedule() rather than cpu_relax() during
	shutdown synchronization wait loop.
	* staptree.cxx (probe::printsig): Put multiple probe points on same
	line.

2007-09-28  Frank Ch. Eigler  <fche@elastic.org>

	* Makefile.in: Regenerated from Jim Keniston's uprobes Makefile.am
	changes.

2007-09-25  Josh Stone  <joshua.i.stone@intel.com>

	* tapsets.cxx (translator_output::~translator_output): Fix mismatched
	delete / delete [].

2007-09-25  David Smith  <dsmith@redhat.com>

	* tapsets.cxx (mark_query::handle_query_module): Updated for
	9/18/2007 markers patch.
	(mark_derived_probe::parse_probe_sig): Ditto.
	(mark_derived_probe_group::emit_module_decls): Ditto.
	(mark_derived_probe_group::emit_module_init): Ditto.
	(mark_derived_probe_group::emit_module_exit): Ditto.

2007-09-24  Masami Hiramatsu <mhiramat@redhat.com>

	PR 3916
	* buildrun.cxx (compile_pass): Add new autoconf options for checking
	time related APIs.

2007-09-21  Frank Ch. Eigler  <fche@elastic.org>

	rhbz #300121
	* elaborate.cxx (dead_stmtexpr_remover): Add visit_if_statement,
	visit_foreach_loop, visit_for_loop): Support elision for unbraced
	statement bodies.
	(visit_expr_statement): Assert absence of unexpected nesting.

2007-09-17  David Smith  <dsmith@redhat.com>

	PR 1154
	* stapprobes.5.in: Documented procfs probes.
