@@ -1,3 +1,10 @@
+2007-10-03  Frank Ch. Eigler  <fche@elastic.org>
+
+	PR 5096
+	* translate.cxx (emit_function): Put nesting limit/control logic into
+	function body ...
+	(visit_functioncall): ... and not into each call site.
+
 2007-10-02  Frank Ch. Eigler  <fche@redhat.com>
 
 	PR 3635
